--- a/src/style.css
+++ b/src/style.css
@@ -33,16 +33,17 @@ body {
     width: 100vw;
     height: 90vh;
     position: relative;
-    /* background-color: rgba(170, 20, 20, 0.4); */
+    background-color: rgba(0, 0, 0, 0);
 }
 
 #page1 {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .report {
