--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Comic Neue';
+    transition: all 0.3s ease-in-out;
 }
 
 :root {
@@ -51,8 +52,8 @@ body {
 }
 
 /* Riot */
-/* button */
 
+/* button */
 .cssbuttons-io {
     position: relative;
     font-family: inherit;
@@ -108,3 +109,13 @@ body {
 .cssbuttons-io:active {
     transform: scale(0.95);
 }
+/* button */
+
+/* icon */
+.image:hover .hover {
+    opacity: 1;
+    transform: scale(3);
+    transition: all 0.5s ease-in-out;
+}
+
+/* icon */
