--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,7 @@ body {
     align-items: center;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0);
+    text-align: center;
 }
 
 .report {
